fix: remove .text selector and all properties, add display flex, justify content center, margin top 32px, gap 52px and text align to .container, keep display flex and justify content center in .title

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -4,7 +4,10 @@ body {
 
 .container {
   display: flex;
- 
+  justify-content: center;
+  margin-top: 32px;
+  gap: 52px;
+  text-align: center;
 }
 
 img {
@@ -31,11 +34,4 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
-}
-
-.text {
-  display: flex;
-  /* flex-wrap: wrap; */
-  align-content: center;
-  text-align: center;
 }
